add select with value in schema

--- a/examples/index.html
+++ b/examples/index.html
@@ -48,6 +48,18 @@
 
       <tbody></tbody>
     </table>
+
+    <table id="providersWithSchema">
+      <thead>
+      <tr>
+        <th>Примеры со схемой</th>
+        <th></th>
+      </tr>
+      </thead>
+
+      <tbody></tbody>
+    </table>
+
   </div>
   <!-- Latest compiled and minified JavaScript -->
   <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
